# CMake_helpers

./: CMakeLists.txt  CMake_dependencies.cmake
toolchain/fekir_inspired_(old)/: x86_64-windows-msvc.cmake  x86_64-windows-msvc_winsdk.cmake  x86_64-windows-winsdk.cmake
